--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 
         <nav class="container navbar fixed-top">
             <div class="d-flex">
-                <img class="logo-your" src="./images/your_logo.png">
-                <p class="fs-3">LOGO</p>
+                <img src="./images/your_logo.png" class="logo-your">
+                <div class="logo">
+                    <p class="m-auto fs-3">LOGO</p>
+                </div>
             </div>
 
             <div class="justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-
-
 
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
@@ -43,25 +43,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
                     </ul>
-                    <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
                 </div>
             </div>
         </nav>
@@ -69,18 +51,83 @@
 
     <main>
         <section id="home" class="d-flex justify-content-center align-items-center">
-            <div class="container text-white text-center">
-                <h2>In the hall of the</h2>
-                <h1>Mountain King</h1>
-                <p>This is simple hero unit a simple jubotron-style component for</p>
-                <p>calling extra attention to featured content or information</p>
+            <div class="text-white text-center">
+                <h2 class="petit-titre m-0">In the hall of the</h2>
+                <h1 class="gros-titre">Mountain King</h1>
+                <p class="fs-4 pt-5 m-1">This is simple hero unit a simple jubotron-style component for</p>
+                <p class="fs-4 pb-3">calling extra attention to featured content or information</p>
 
 
-                <div class="d-flex justify-content-center p-2">
+                <div class="pt-3">
                     <button class="btn btn-lg text-white video btn-info fs-4">Learn more</button>
                     <button class="btn btn-lg video btn-danger fs-4">Download</button>
                 </div>
             </div>
+        </section>
+
+        <section id="features" class="d-flex justify-content-center">
+            <div class="container-md row pt-5 pb-5">
+                <article class="col-4 text-center">
+                    <div class="pb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" fill="currentColor"
+                            class="bi bi-pencil" viewBox="0 0 16 16">
+                            <path
+                                d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+                        </svg>
+                    </div>
+
+                    <h3 class="pb-3">Consectetur Risus</h3>
+
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </article>
+
+                <article class="col-4 text-center">
+                    <div class="pb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" fill="currentColor"
+                            class="bi bi-camera" viewBox="0 0 16 16">
+                            <path
+                                d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z" />
+                            <path
+                                d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+                        </svg>
+                    </div>
+
+                    <h3 class="pb-3">Ultricies Aenean</h3>
+
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </article>
+
+                <article class="col-4 text-center">
+                    <div class="pb-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" fill="currentColor"
+                            class="bi bi-bookmark" viewBox="0 0 16 16">
+                            <path
+                                d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z" />
+                        </svg>
+                    </div>
+
+                    <h3 class="pb-3">Cras Sollicitudin</h3>
+
+                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </article>
+            </div>
+        </section>
+
+        <section id="about" class="d-flex">
+            <div class="container-md row col-md-4 ms-auto">
+
+                <div class="justify-content-start">
+                    <h2>Ligula Mattis Ornane Ultricies</h2>
+                    <h3>Pellentesque Cursus Amet Parturient Etiam</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        utlabore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                </div>
+
+            </div>
+
         </section>
 
     </main>
