--- a/index.html
+++ b/index.html
@@ -226,11 +226,10 @@
                         </div>
                     </div>
 
-                        <div class="col-md-4">
-                            <img src="./images/776.jpeg" alt="776" width="100%" height="auto" class="py-2">
-                            <img src="./images/439.jpeg" alt="439" width="100%" height="auto" class="py-2">
-                        </div>
-                    
+                    <div class="col-md-4">
+                        <img src="./images/776.jpeg" alt="776" width="100%" height="auto" class="py-2">
+                        <img src="./images/439.jpeg" alt="439" width="100%" height="auto" class="py-2">
+                    </div>
                 </div>
             </div>
 
@@ -239,26 +238,28 @@
         </section>
 
         <section class="partenaires">
-            <div class="container-md pt-5 pb-5 d-flex justify-content-between">
-                <div>
-                    <img src="./images/logo-sample-01.jpg" style="width: 110px;">
+            <div class="container-md pt-5 pb-5">
+                <div id="logosPartenaires" class="row">
+                <div class="col">
+                    <img src="./images/logo-sample-01.jpg" width="100%" height="auto" class="img-fluid">
                 </div>
-                <div>
-                    <img src="./images/logo-sample-02.jpg" style="width: 120px;">
+                <div class="col">
+                    <img src="./images/logo-sample-02.jpg" width="100%" height="auto" class="img-fluid">
                 </div>
-                <div>
-                    <img src="./images/logo-sample-03.png" style="width: 120px;">
+                <div class="col">
+                    <img src="./images/logo-sample-03.png" width="100%" height="auto" class="img-fluid">
                 </div>
-                <div>
-                    <img src="./images/logo-sample-04.jpg" style="width: 120px;">
+                <div class="col">
+                    <img src="./images/logo-sample-04.jpg" width="100%" height="auto" class="img-fluid">
                 </div>
-                <div>
-                    <img src="./images/logo-sample-05.jpg" style="width: 130px;">
+                <div class="col">
+                    <img src="./images/logo-sample-05.jpg" width="100%" height="auto" class="img-fluid">
                 </div>
-                <div>
-                    <img src="./images/logo-sample-06.png" style="width: 130px;">
+                <div class="col">
+                    <img src="./images/logo-sample-06.png" width="100%" height="auto" class="img-fluid">
                 </div>
             </div>
+        </div>
         </section>
 
         <section id="mail" class="d-flex justify-content-center align-items-center">
